--- a/css/styles.css
+++ b/css/styles.css
@@ -284,7 +284,9 @@ body {
 .work {
   padding-bottom: 94px;
 }
-.work-title {
+.work-title,
+.team-title,
+.clients-title {
   margin-bottom: 50px;
 
   font-weight: 700;
@@ -292,6 +294,7 @@ body {
   line-height: 1.17;
   text-align: center;
 }
+
 .work-menu {
   display: flex;
   text-align: center;
@@ -316,14 +319,6 @@ body {
 
   background-color: var(--secondary-bg-color);
 }
-.team-title {
-  min-height: 42px;
-  margin-bottom: 50px;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-}
 .menu-team {
   display: flex;
   margin-left: -30px;
@@ -346,6 +341,37 @@ body {
 .card-image {
   display: block;
 }
+/* .social-item {
+  display: flex;
+  justify-content: space-between;
+  margin: 0px;
+  padding: 0px;
+} */
+
+/* .social {
+  padding-bottom: 30px;
+  margin-right: 32px;
+  margin-left: 32px;
+}
+
+.social-box {
+  display: flex;
+  justify-content: center;
+}
+
+.social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: var(--white);
+}
+
+.social-link:not(:last-child) {
+  margin-right: 10px;
+} */
 .team-heading {
   margin-bottom: 10px;
   font-weight: 500;
@@ -361,7 +387,13 @@ body {
   margin: 0;
   text-align: center;
 }
-
+/* Наши клиенты */
+.clients {padding-top: 94px;
+padding-bottom: 94px;}
+.client-title {margin-bottom: 50px;}
+.client-menu {display: flex;}
+.client-icon {width: 106px;
+  height: 60px;}
 /*Портфолио*/
 .portfolio {
   padding-top: 94px;
@@ -436,12 +468,6 @@ body {
   margin-left: 30px;
   margin-bottom: 30px;
 }
-/* .work-list-item:nth-child(3n) {
-  margin-right: 0;
-}
-.work-list-item:nth-last-child(- n + 3) {
-  margin-bottom: 0;
-} */
 .work-portfolio-image {
   display: block;
 }
@@ -451,13 +477,13 @@ body {
   line-height: 2;
   letter-spacing: 0.06em;
 }
-
 .description-card-wrapper {
   padding: 20px 24px;
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
 }
+
 .footer {
   padding-top: 60px;
   padding-bottom: 60px;
