--- a/css/styles.css
+++ b/css/styles.css
@@ -256,6 +256,7 @@ body {
   display: block;
   content: '';
   height: 120px;
+  fill: var(--title-text-color);
   background-size: auto;
   margin-bottom: 30px;
   background-repeat: no-repeat;
@@ -351,20 +352,20 @@ body {
 .card-image {
   display: block;
 }
-/* .social-item {
+/* Блок соцсетей */
+.social-menu {
   display: flex;
   justify-content: space-between;
   margin: 0px;
   padding: 0px;
-} */
-
-/* .social {
-  padding-bottom: 30px;
-  margin-right: 32px;
-  margin-left: 32px;
 }
-
-.social-box {
+.team-social-menu {
+  display: flex;
+  justify-content: center;
+  margin: 0px;
+  padding: 0px;
+}
+.social-item {
   display: flex;
   justify-content: center;
 }
@@ -376,12 +377,25 @@ body {
   width: 44px;
   height: 44px;
   border-radius: 50%;
-  background-color: var(--white);
+  /* background-color: var(--logo-bg-white-color); */
 }
-
 .social-link:not(:last-child) {
   margin-right: 10px;
-} */
+}
+
+.team .social-icon {
+  fill: var(--border-client);
+}
+.team .social-link:hover,
+.team .social-link:focus {
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.team .social-icon:hover,
+.team .social-icon:focus {
+  fill: var(--logo-bg-white-color);
+}
+
 .team-heading {
   margin-bottom: 10px;
   font-weight: 500;
@@ -395,6 +409,7 @@ body {
   line-height: 1.19;
   color: var(--primary-text-color);
   margin: 0;
+  margin-bottom: 16px;
   text-align: center;
 }
 /* Наши клиенты */
@@ -515,6 +530,12 @@ body {
   margin-left: 30px;
   margin-bottom: 30px;
 }
+.work-list-item:hover,
+.work-list-item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+    cursor: pointer;
+}
 .work-portfolio-image {
   display: block;
 }
@@ -532,17 +553,17 @@ body {
 }
 /* Footer */
 .footer {
-  display: flex;
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: var(--hero-footer-bg-color);
 }
 .footer-container {
   display: flex;
-  justify-content: flex-start;
-  padding-top: 60px;
-  padding-bottom: 60px;}
-   
-/* .addres-container {padding-top: 60px;
-  padding-bottom: 60px;} */
+  align-items: baseline;
+}
+.address-container {
+  margin-right: 70px;
+}
 .footer-logo {
   display: block;
   color: var(--accent-color);
@@ -568,9 +589,7 @@ body {
   display: block;
   width: 206px;
   height: 80px;
-  /* padding-top: 72px; */
 }
-
 .social-text-title {
   margin-bottom: 20px;
   font-weight: 700;
@@ -581,36 +600,13 @@ body {
 .footer .social-icon {
   fill: var(--logo-bg-white-color);
 }
-
+.social-menu {
+  display: flex;
+}
 .footer .social-link {
   background: rgba(255, 255, 255, 0.1);
 }
-
 .footer .social-link:hover,
 .footer .social-link:focus {
   background-color: var(--accent-color);
-}
-/* Блок соцсетей */
-.social-menu {
-  display: flex;
-  justify-content: space-between;
-  margin: 0px;
-  padding: 0px;
-}
-.social-item {
-  display: flex;
-  justify-content: center;
-}
-
-.social-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  background-color: var(--logo-bg-white-color);
-}
-.social-link:not(:last-child) {
-  margin-right: 10px;
 }
