fix hover in portfolio

--- a/css/styles.css
+++ b/css/styles.css
@@ -129,6 +129,7 @@ body {
 .contacts-nav,
 .contacts-link {
   display: inline-flex;
+  align-items: center;
   color: var(--primary-text-color);
   text-decoration: none;
   list-style: none;
@@ -519,8 +520,8 @@ body {
   text-decoration: none;
   
 }
-.work-list-item:hover,
-.work-list-item:focus {
+.work-list-item:hover
+ {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
     cursor: pointer;
