--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,8 @@
   --work-bg-color: #e5e5e5;
   --border-header: #ececec;
   --border-client: #afb1b8;
+  --portfolio-list-item-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16),
+    0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
 }
 
 h1,
@@ -519,18 +521,17 @@ body {
   list-style: none;
 }
 .work-list-link {
-  text-decoration: none; 
+  display: block;
+  text-decoration: none;
 }
-.work-list-item:hover,
-.work-list-item:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-  cursor: pointer;
+.work-list-link:hover,
+.work-list-link:focus {
+  outline: 1px solid #eeeeee;
+  box-shadow: var(--portfolio-list-item-shadow);
 }
 .work-portfolio-image {
   display: block;
   width: 100%;
-
 }
 .title-portfolio {
   color: var(--title-text-color);
