--- a/css/styles.css
+++ b/css/styles.css
@@ -274,6 +274,7 @@ body {
   line-height: 1.17;
   text-transform: uppercase;
 }
+
 .text-submit {
   line-height: 1.71;
   color: var(--primary-text-color);
@@ -360,15 +361,6 @@ body {
 }
 .social-item:not(:last-child) {
   margin-right: 10px;}
-/* .social-link {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  border-radius: 50%;
-  /* background-color: var(--logo-bg-white-color); */
 .social-link {
   width: 100%;
   height: 100%;
@@ -540,7 +532,11 @@ body {
   line-height: 2;
   letter-spacing: 0.06em;
 }
-
+.text-portfolio {
+  font-size: 16px;
+  line-height: 1.87;
+  color: var(--primary-text-color);
+}
 .description-card-wrapper {
   padding: 20px 24px;
   border-left: 1px solid #eeeeee;
